Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         const COMPANY_PHONE = "919999999999"; 
         
         // 🟢 LIVE GUIDE VIDEO SRC
-        const GUIDE_VIDEO_SRC = 'https://youtube.com/shorts/NdcleYSQdbE?si=IWRNgftjkVAJqZyC';
+        const GUIDE_VIDEO_SRC = 'fun.mp4';
         
         const PRODUCTS = [
             { 
@@ -103,7 +103,7 @@
                 liveViewers: '1.2k', 
                 recentBuys: '124 bought today', 
                 videoClass: 'bg-gradient-to-br from-red-800 to-red-950', 
-                videoSrc: 'https://youtube.com/shorts/NdcleYSQdbE?si=IWRNgftjkVAJqZyC'
+                videoSrc: 'fun.mp4'
             },
             { 
                 id: 'oil', 
@@ -137,7 +137,7 @@
                 liveViewers: '340', 
                 recentBuys: '45 bought today', 
                 videoClass: 'bg-gradient-to-br from-blue-700 to-blue-950', 
-                videoSrc: 'https://youtube.com/shorts/NdcleYSQdbE?si=IWRNgftjkVAJqZyC'
+                videoSrc: 'fun.mp4'
             }
         ];
 
@@ -763,4 +763,5 @@
     </script>
 </body>
 </html>
+
 
