--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         const GUIDE_VIDEO_SRC = 'https://storage.googleapis.com/gtv-videos-bucket/sample/ForBiggerJoyrides.mp4';
         
         // 🔒 CANONICAL SITE URL (CHANGE THIS AFTER GITHUB DEPLOY)
-        const SITE_BASE_URL = "https://yourusername.github.io/jodo";
+        const SITE_BASE_URL = "https://satyanarayanagaraga.github.io/jodo-mvp/";
 
         // ================= GOOGLE SHEET BACKEND =================
         const SHEET_API = "https://script.google.com/macros/s/AKfycbxDsU-xD2k_RWHgkGFj0sU7iuDr0FgqZ5QsH6jaHw0oRUGWFlHXCi6CzdxxlPEyZAux/exec";
